# ecomenu-assistant

./: CLAUDE.md  README.md  main.py  pyproject.toml
data/: loader.py
notebooks/: test_analyzer.ipynb
src/ecomenu_assistant/data/: analyzer.py  loader.py
src/ecomenu_assistant/llm/: openai_client.py
src/ecomenu_assistant/ui/: analysis_page.py  app.py  chat_page.py  navigation.py
src/ecomenu_assistant/visualization/: charts.py
